# servo-csharp-binding-exp

./: .gitignore  .gitmodules  README.md  Servo.Sharp.slnx  build-android.sh  build.sh
servo-ffi/: Cargo.toml  build.rs  cbindgen.toml
servo-ffi/src/: hardware_rendering.rs  lib.rs  resources.rs  types.rs
src/: Servo.Sharp.Native.targets
src/Servo.Sharp/: Enums.cs  FaviconData.cs  HardwareRenderingContext.cs  IProtocolHandler.cs  PixelData.cs  ProtocolRegistry.cs  ProtocolResponse.cs  RenderingContext.cs  Servo.Sharp.csproj  ServoEngine.cs  ServoJsonContext.cs  ServoNative.g.cs  ServoWebView.cs  SiteDataEntry.cs  SoftwareRenderingContext.cs  UserContentManager.cs  UserScript.cs  UserStyleSheet.cs
src/Servo.Sharp.Avalonia/: AuthenticationOverlay.cs  AvaloniaKeyMapping.cs  BluetoothDeviceOverlay.cs  ColorPickerOverlay.cs  FilePickerHandler.cs  NotificationOverlay.cs  PermissionOverlay.cs  ProtocolHandlerOverlay.cs  SelectElementOverlay.cs  Servo.Sharp.Avalonia.csproj  ServoAppBuilderExtensions.cs  ServoBitmapSurface.cs  ServoLocator.cs  ServoRenderingBackend.cs  ServoTextInputMethodClient.cs  ServoWebViewControl.cs
src/Servo.Sharp.Demo/: App.axaml  App.axaml.cs  AuthenticationDialog.cs  DemoJsonContext.cs  DragTabItem.cs  DragTabPanel.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Servo.Sharp.Demo.csproj  ServoProtocolHandler.cs  app.manifest
src/Servo.Sharp.Demo.Android/: MainActivity.cs  Servo.Sharp.Demo.Android.csproj  ServoApplication.cs
src/Servo.Sharp.Demo.Android/Properties/: AndroidManifest.xml
src/Servo.Sharp.Demo.Core/: App.axaml  App.axaml.cs  DemoJsonContext.cs  MobileMainPage.axaml  MobileMainPage.axaml.cs  Servo.Sharp.Demo.Core.csproj  ServoAppSetup.cs  ServoProtocolHandler.cs
src/Servo.Sharp/Events/: AlertRequestEventArgs.cs  AuthenticationRequestEventArgs.cs  BluetoothDeviceSelectionEventArgs.cs  ColorPickerRequestEventArgs.cs  ConfirmRequestEventArgs.cs  ContextMenuRequestEventArgs.cs  CrashedEventArgs.cs  CreateNewWebViewRequestEventArgs.cs  CursorChangedEventArgs.cs  SelectOption.cs  (+21 more)
(+14 files in other folders)
